aboutus content visibility fix

--- a/styles.css
+++ b/styles.css
@@ -283,6 +283,7 @@ button{
 }
 #about .wrapper .content p{
   text-align: start;
+  color: black;
 }
 
 
